# EnterpriseAutomation

./: CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMakeLists.txt  CReport.cpp  CReport.h  EnterpriseAutomation.pro  PracticeMain.pro  PracticeMain.pro.user.7e60389  PracticeMain.pro.user.e1b9997  README.md  Writers.cxx  Writers.hxx  canimationmanager.cpp  canimationmanager.h  main.cpp
Include/: BasicExcel.hxx  CEnterprise.hxx  CModelManager.hxx  CObserver.hxx  CPracticeDecoder.hxx  CRatioManager.hxx  CReportManipulator.hxx  CSubject.hxx  ExcelFormat.hxx  Ilaria.hxx  IlariaTypes.hxx  Models.hxx  Ratios.hxx
Main/: CMakeLists.txt  main.cxx
Src/: BasicExcel.cxx  CEnterprise.cxx  CModelManager.cxx  CPracticeDecoder.cxx  CRatioManager.cxx  CReportManipulator.cxx  CSubject.cxx  ExcelFormat.cxx  Models.cxx  Ratios.cxx
